--- a/ui/pluto_control.ui
+++ b/ui/pluto_control.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>961</width>
-    <height>695</height>
+    <width>1094</width>
+    <height>734</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -523,7 +523,7 @@ p, li { white-space: pre-wrap; }
       <x>390</x>
       <y>520</y>
       <width>281</width>
-      <height>111</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="title">
@@ -549,7 +549,7 @@ p, li { white-space: pre-wrap; }
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;🚧&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;✋🏻🍄&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="tE_status_info">
@@ -573,22 +573,6 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="placeholderText">
       <string>OK / ERROR</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pB_EmSwitchConfig">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>170</x>
-       <y>70</y>
-       <width>101</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>⚙️</string>
      </property>
     </widget>
    </widget>
@@ -1208,7 +1192,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>961</width>
+     <width>1094</width>
      <height>22</height>
     </rect>
    </property>
